--- a/main.css
+++ b/main.css
@@ -11,6 +11,10 @@
     box-sizing: border-box;
     overflow: hidden;
 }
+a{
+    text-decoration: none;
+    cursor: pointer;
+}
 .navbar{
     width: 100%;
     display: flex;
@@ -18,6 +22,14 @@
     align-items: center;
     margin: 25px;
 }
+.navbar > a:nth-child(1) {
+    display: inherit;
+    cursor: pointer;
+   }
+   .navbar > a:nth-child(1) > h1:nth-child(2) {
+    color: #c619ff;
+   }
+   
 .logo{
     width: 75px;
     cursor: pointer;
@@ -57,6 +69,7 @@ button{
     color: white;
     border: none;
     font-size: 16px;
+    display: none;
 }
 button a{
     text-decoration: none;
