--- a/main.css
+++ b/main.css
@@ -239,6 +239,10 @@ p {
     .row {
         text-align: center;
     }
+    .navbar{
+        justify-content: center;
+        margin: 0;
+    }
        
        
 }
